eevee-grammar.bnf
expression        -> literal
                  | unary
                  | binary
                  | grouping
                  ;

literal           -> NUMBER | STRING | "true" | "false" | "nil" ;
grouping          -> "(" expression ")" ;
postunary         -> (expression ( "++" | "--" )) ;
preunary          -> ( "-" | "!" ) expression ;
ternary           -> expression operator expression operator expression ;
binary            -> expression operator expression ;

operator          -> "==" | "!=" | "<" | "<=" | ">" | ">="
                  | "+" | "+=" | "++" | "-" | "-=" | "--" | "*"
                  | "*=" | "/" | "/=" | "%" | "%=" | "?" | ":"
                  ;

program           -> declaration* EOF ;

declaration       -> varDecl
                  | statement
                  ;

statement         -> exprStmt
                  | printStmt
                  | block
                  ;

block             -> "{" declaration* "}" ;

varDecl           -> "let" IDENTIFIER ( "=" expression )? ";" ;
exprStmt          -> expression ";" ;
printStmt         -> "print" expression ";" ;

expression        -> assignment ;

assignment        -> IDENTIFIER "=" assignment
                  | ternary ;

ternary           -> equality ? equality (: ternary)* ;

equality          -> comparison ( ( "!=" | "==" ) comparison )* ;

comparison        -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;

term              -> factor ( ( "-" | "-=" | "+" | "+=" ) factor )* ;

factor            -> postunary ( ( "/" | "/=" | "*" | "*=" | "%" | "%=" ) postunary )* ;

postunary         -> ( "++" | "--") preunary ;

preunary          -> ( "!"  | "-" ) unary
                  | primary
                  ;

primary           -> NUMBER | STRING | "true" | "false" | "nil"
                  | "(" expression ")" | IDENTIFIER
                  ;
